@@ -6,6 +6,13 @@ Run `rake db:migrate`
 Run `rake test && rake community_engine:test`
 That's it!
 
+Note: this version adds a counter_cache to taggings, so you may need to update the counter on your existing tags by doing something like:
+
+Tag.all(:limit => 2).each do |tag|
+  Tag.update_counters tag.id, :taggings_count => tag.taggings.length
+end
+
+If you have many tags, this could take a while, though.
 
 Upgrading to v1.0.4
 ===================
