@@ -2,9 +2,11 @@
 * haml/sass propagation (desert)
 * upgrade documentation/rake tasks to fix old migrations
 
+
 = 1.0.4.2
 * Rails 2.3.4 compatibility (all tests pass, Takk)
 * Add searchlogic gem dependency (searchlogic is awesome, will be using it more in the future, currently just using on admin_controller#comments)
+* Add searchlogic to manage tags page, add taggings_count to tags (new migration)
 
 = 1.0.4
 * Changes to Japanese language translations
